--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
+    "use-file-picker": "^2.1.4",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.0.2",
     "zustand": "^5.0.8"
