--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "serve": "vite preview",
+    "serve": "pnpm run vite preview",
     "dev": "vite dev --port=3001",
     "deploy": "vercel --prod",
     "blog:build": "content-collections build",
